fix: notify PATRON + SUPER_ADMIN for money notifications