@@ -15,14 +15,21 @@ import com.fishcam.infrastructure.aop.LogAudit;
 import com.fishcam.infrastructure.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.FormatStyle;
 import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -38,21 +45,95 @@ public class NotificationService {
     private final NotificationMapper notificationMapper;
     private final RapportJournalierRecordRepository rapportRecordRepository;
 
-    @Transactional(readOnly = true)
-    public List<NotificationResponse> getNotificationsByUser(Long requestedUserId, User currentUser) {
-        // ✅ Vérification IDOR dans le service
+    private String fcfa(BigDecimal v) {
+        if (v == null) return "0";
+        return v.setScale(0, RoundingMode.HALF_UP).toPlainString();
+    }
+
+
+    private User loadAndAuthorizeUser(Long requestedUserId, User currentUser) {
         if (!currentUser.getId().equals(requestedUserId) && !isSuperAdmin(currentUser)) {
-            throw new AccessDeniedException("Vous ne pouvez pas accéder aux notifications d'un autre utilisateur");
+            throw new AccessDeniedException("Accès refusé");
         }
-
-        User user = userRepository.findById(requestedUserId)
+        return userRepository.findById(requestedUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("Utilisateur non trouvé"));
+    }
 
-        return notificationRepository.findByUserOrderByCreatedAtDesc(user)
+    @Transactional(readOnly = true)
+    public Page<NotificationResponse> getNotificationsPageByUser(
+            Long requestedUserId,
+            int page,
+            int size,
+            User currentUser
+    ) {
+        User user = loadAndAuthorizeUser(requestedUserId, currentUser);
+
+        Pageable pageable = PageRequest.of(page, size);
+        return notificationRepository.findByUserOrderByCreatedAtDesc(user, pageable)
+                .map(notificationMapper::toResponse);
+    }
+
+    public List<NotificationResponse> getRecentNotifications(
+            Long requestedUserId,
+            int limit,
+            User currentUser
+    ) {
+        User user = loadAndAuthorizeUser(requestedUserId, currentUser);
+
+        int safeLimit = Math.min(Math.max(limit, 1), 50); // 1..50
+        Pageable pageable = PageRequest.of(0, safeLimit);
+
+        return notificationRepository.findRecentByUser(user, pageable)
+                .getContent()
                 .stream()
                 .map(notificationMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional
+    public int markAllAsRead(Long requestedUserId, User currentUser) {
+        User user = loadAndAuthorizeUser(requestedUserId, currentUser);
+        return notificationRepository.markAllAsReadByUser(user);
+    }
+
+
+    private List<User> recipientsForMoney(Poissonnerie p) {
+        List<User> patrons = userRepository.findByDefaultPoissonnerie(p)
+                .stream()
+                .filter(u -> u.getRole() == Role.PATRON)
+                .toList();
+
+        List<User> superAdmins = userRepository.findByRole(Role.SUPER_ADMIN);
+
+        // merge sans doublons
+        return java.util.stream.Stream.concat(patrons.stream(), superAdmins.stream())
+                .collect(java.util.stream.Collectors.collectingAndThen(
+                        java.util.stream.Collectors.toMap(User::getId, u -> u, (a, b) -> a),
+                        m -> new java.util.ArrayList<>(m.values())
+                ));
+    }
+
+    @Transactional
+    public void createNotificationCompteSolde(CompteCourant compte) {
+        String message = String.format(
+                "Compte soldé%nClient : %s %s%nLe compte courant a été complètement soldé.",
+                compte.getClient().getFirstName(),
+                compte.getClient().getLastName()
+        );
+
+        for (User u : recipientsForMoney(compte.getPoissonnerie())) {
+            Notification notif = new Notification();
+            notif.setType(TypeNotification.COMPTE_SOLDE);
+            notif.setMessage(message);
+            notif.setUser(u);
+            notif.setPoissonnerie(compte.getPoissonnerie());
+            notif.setRead(false);
+            notificationRepository.save(notif);
+        }
+    }
+
+
+
 
     @Transactional
     public void markAsRead(Long notificationId, User currentUser) {
@@ -89,10 +170,9 @@ public class NotificationService {
 
     @Transactional
     public void createAlerteCompteCourant(CompteCourant compte, String typeAlerte) {
-        List<User> usersToNotify = userRepository.findByDefaultPoissonnerie(compte.getPoissonnerie());
-
+        List<User> usersToNotify = recipientsForMoney(compte.getPoissonnerie());
         if (usersToNotify.isEmpty()) {
-            System.err.println("⚠️ Aucun utilisateur à notifier pour poissonnerie " + compte.getPoissonnerie().getId());
+            log.warn("⚠️ Aucun utilisateur à notifier pour poissonnerie {}", compte.getPoissonnerie().getId());
             return;
         }
 
@@ -100,14 +180,19 @@ public class NotificationService {
         TypeNotification type;
 
         if ("FRANCHISSEMENT_SEUIL".equals(typeAlerte)) {
-            message = String.format("🔴 %s %s a franchi le seuil de -5000 FCFA (solde: %s FCFA)",
-                    compte.getClient().getFirstName(),
+            message = String.format(
+                    "Alerte compte courant : Seuil franchi%n" +
+                            "Client : %s %s%n" +
+                            "Seuil : -5000 FCFA%n" +
+                            "Solde actuel : %s FCFA",                    compte.getClient().getFirstName(),
                     compte.getClient().getLastName(),
-                    compte.getSolde());
+                    fcfa(compte.getSolde()));
             type = TypeNotification.COMPTE_COURANT_ALERTE;
         } else {
-            message = String.format("⚠️ %s %s a augmenté sa dette de façon significative (solde: %s FCFA)",
-                    compte.getClient().getFirstName(),
+            message = String.format(
+                    "Alerte compte courant : Augmentation significative%n" +
+                            "Client : %s %s%n" +
+                            "Solde actuel : %s FCFA",                    compte.getClient().getFirstName(),
                     compte.getClient().getLastName(),
                     compte.getSolde());
             type = TypeNotification.COMPTE_COURANT_ALERTE;
@@ -120,23 +205,10 @@ public class NotificationService {
             notification.setType(type);
             notification.setMessage(message);
             notification.setRead(false);
-            notification.setCreatedAt(LocalDateTime.now());
             notificationRepository.save(notification);
         }
     }
 
-    @Transactional
-    public void createNotificationCompteSolde(CompteCourant compte, User user) {
-        Notification notif = new Notification();
-        notif.setType(TypeNotification.COMPTE_SOLDE);
-        notif.setMessage("✅ Bravo ! Le compte de " +
-                compte.getClient().getFirstName() + " " + compte.getClient().getLastName() +
-                " a été complètement soldé !");
-        notif.setUser(user);
-        notif.setPoissonnerie(compte.getPoissonnerie());
-        notif.setRead(false);
-        notificationRepository.save(notif);
-    }
 
     @Transactional
     public void createRapportJournalier(Poissonnerie poissonnerie) {
@@ -164,20 +236,27 @@ public class NotificationService {
         Long nbComptesEnDette = compteCourantRepository.countComptesEnDette(poissonnerie);
         BigDecimal totalDettes = compteCourantRepository.sumTotalDettes(poissonnerie);
 
+        BigDecimal emprunts = totalEmprunts != null ? totalEmprunts : BigDecimal.ZERO;
+        BigDecimal remboursements = totalRemboursements != null ? totalRemboursements : BigDecimal.ZERO;
+        BigDecimal net = remboursements.subtract(emprunts);
+        BigDecimal totalDettesActives = totalDettes != null ? totalDettes : BigDecimal.ZERO;
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofLocalizedDate(FormatStyle.LONG).withLocale(Locale.FRENCH);
+        String dateFormatee = today.format(formatter);
+
         String message = String.format(
-                "📊 Rapport du %s\n\n" +
-                        "💰 Emprunts : %d transactions - %s FCFA\n" +
-                        "💵 Remboursements : %d transactions - %s FCFA\n" +
-                        "📉 Solde net : %s FCFA\n\n" +
-                        "⚠️ Comptes en dette : %d clients\n" +
-                        "💳 Total dettes actives : %s FCFA",
-                LocalDateTime.now().toLocalDate(),
-                nbEmprunts, totalEmprunts != null ? totalEmprunts : BigDecimal.ZERO,
-                nbRemboursements, totalRemboursements != null ? totalRemboursements : BigDecimal.ZERO,
-                (totalRemboursements != null ? totalRemboursements : BigDecimal.ZERO)
-                        .subtract(totalEmprunts != null ? totalEmprunts : BigDecimal.ZERO),
+                "Rapport du %s%n%n" +
+                        "Emprunts : %d transactions - %s FCFA%n" +
+                        "Remboursements : %d transactions - %s FCFA%n" +
+                        "Net (R - E) : %s FCFA%n%n" +
+                        "Comptes en dette : %d clients%n" +
+                        "Total dettes actives : %s FCFA",
+                dateFormatee,
+                nbEmprunts, fcfa(emprunts),
+                nbRemboursements, fcfa(remboursements),
+                fcfa(net),
                 nbComptesEnDette,
-                totalDettes
+                fcfa(totalDettesActives)
         );
 
         List<User> usersToNotify = userRepository.findByDefaultPoissonnerie(poissonnerie);
@@ -189,7 +268,6 @@ public class NotificationService {
             notification.setType(TypeNotification.RAPPORT_JOURNALIER);
             notification.setMessage(message);
             notification.setRead(false);
-            notification.setCreatedAt(LocalDateTime.now());
             notificationRepository.save(notification);
         }
 
@@ -199,7 +277,6 @@ public class NotificationService {
 
     @Transactional
     public void verifierJoursNonClotures(Poissonnerie poissonnerie) {
-        LocalDate hier = LocalDate.now().minusDays(1);
 
         // Vérifier les 7 derniers jours (évite de remonter trop loin)
         for (int i = 1; i <= 7; i++) {
@@ -210,9 +287,10 @@ public class NotificationService {
             if (!cloture) {
                 // Créer une alerte pour ce jour manquant
                 String message = String.format(
-                        "⚠️ JOURNÉE NON CLÔTURÉE\n\nLe rapport du %s n'a pas été généré.\n" +
-                                "Le PC était peut-être éteint à 19h ce jour-là.\n" +
-                                "Consultez les transactions manuellement si nécessaire.",
+                        "Alerte : journée non clôturée%n%n" +
+                                "Le rapport du %s n'a pas été généré.%n" +
+                                "Le poste était peut-être éteint à l'heure prévue.%n" +
+                                "Veuillez vérifier les transactions manuellement si nécessaire.",
                         jour
                 );
 
@@ -229,7 +307,6 @@ public class NotificationService {
                         notif.setType(TypeNotification.RAPPORT_JOURNALIER);
                         notif.setMessage(message);
                         notif.setRead(false);
-                        notif.setCreatedAt(LocalDateTime.now());
                         notificationRepository.save(notif);
                         log.warn("⚠️ Alerte journée non clôturée créée : {} - poissonnerie {}", jour, poissonnerie.getId());
                     }
@@ -250,24 +327,24 @@ public class NotificationService {
         List<User> superAdmins = userRepository.findByRole(Role.SUPER_ADMIN);
 
         if (superAdmins.isEmpty()) {
-            System.err.println("⚠️ Aucun SUPER_ADMIN pour notifier la modification de limite");
+            log.warn("⚠️ Aucun SUPER_ADMIN pour notifier la modification de limite");
             return;
         }
 
         BigDecimal augmentation = nouvelleLimit.subtract(ancienneLimit);
 
         String message = String.format(
-                "⚠️ MODIFICATION LIMITE IMPORTANTE\n\n" +
-                        "Client : %s %s\n" +
-                        "Ancienne limite : %s FCFA\n" +
-                        "Nouvelle limite : %s FCFA\n" +
-                        "Augmentation : +%s FCFA\n\n" +
+                "Alerte : modification de limite de crédit%n%n" +
+                        "Client : %s %s%n" +
+                        "Ancienne limite : %s FCFA%n" +
+                        "Nouvelle limite : %s FCFA%n" +
+                        "Variation : %s FCFA%n%n" +
                         "Modifié par : %s %s (%s)",
                 compte.getClient().getFirstName(),
                 compte.getClient().getLastName(),
-                ancienneLimit,
-                nouvelleLimit,
-                augmentation,
+                fcfa(ancienneLimit),
+                fcfa(nouvelleLimit),
+                fcfa(augmentation),
                 modifiePar.getFirstName(),
                 modifiePar.getLastName(),
                 modifiePar.getRole()
@@ -280,10 +357,9 @@ public class NotificationService {
             notification.setType(TypeNotification.INFO);
             notification.setMessage(message);
             notification.setRead(false);
-            notification.setCreatedAt(LocalDateTime.now());
             notificationRepository.save(notification);
         }
 
-        System.out.println("✅ Notification envoyée à " + superAdmins.size() + " SUPER_ADMIN(s)");
+        log.info("✅ Notification envoyée à {} SUPER_ADMIN(s)", superAdmins.size());
     }
 }
